# Hanoi-Towers

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
core/: Disk.h  HanoiGame.h  HanoiSolver.h  Tower.h  hanoi_api.cpp
docs/: .gitkeep  algorithm.md  architecture.md  conclusion.md  design.md  frontend.md  setup.md  wasm.md
paper/: .gitkeep
src/: main.py  menu.py  settings.py  stack_hanoi.py
src/gui/: gui.py
tests/: test_core.cpp  test_native.cpp
web/: hanoi-bridge.js  hanoi-ui.js  index.html  style.css
